--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <img src="https://media.tenor.com/yvUCU981VYoAAAAj/mochi-cat-goma.gif" alt="GIF" id="gif">
         </div>
         <h1 id="title">Mel, Te Quiero Preguntar Algo</h1>
-        <h2 id="subtitle">¿Me Harías EL Honor De Ser Mi San Valentin?</h2>
+        <h2 id="subtitle">¿Me Harías El Honor De Ser Mi San Valentin?</h2>
     </div>
 
     <!-- Contenedor para centrar los botones -->
